@@ -29,7 +29,7 @@
 #define HEUR_NAME             "zeroobj"
 #define HEUR_DESC             "heuristic trying to solve the problem without objective"
 #define HEUR_DISPCHAR         'Z'
-#define HEUR_PRIORITY         -1000000
+#define HEUR_PRIORITY         100
 #define HEUR_FREQ             0
 #define HEUR_FREQOFS          0
 #define HEUR_MAXDEPTH         0
@@ -48,7 +48,7 @@
 #define DEFAULT_NODESOFS      100LL     /* number of nodes added to the contingent of the total nodes                */
 #define DEFAULT_NODESQUOT     0.1       /* subproblem nodes in relation to nodes of the original problem             */
 #define DEFAULT_ADDALLSOLS    FALSE     /* should all subproblem solutions be added to the original SCIP?            */
-#define DEFAULT_ONLYWITHOUTSOL   TRUE   /**< Should heuristic only be executed if no primal solution was found, yet? */
+#define DEFAULT_ONLYWITHOUTSOL   TRUE   /**< should heuristic only be executed if no primal solution was found, yet? */
 
 /*
  * Data structures
@@ -65,7 +65,7 @@ struct SCIP_HeurData
    SCIP_Real             minimprove;         /**< factor by which zeroobj should at least improve the incumbent       */
    SCIP_Real             nodesquot;          /**< subproblem nodes in relation to nodes of the original problem       */
    SCIP_Bool             addallsols;         /**< should all subproblem solutions be added to the original SCIP?      */
-   SCIP_Bool             onlywithoutsol;     /**< Should heuristic only be executed if no primal solution was found, yet? */
+   SCIP_Bool             onlywithoutsol;     /**< should heuristic only be executed if no primal solution was found, yet? */
 };
 
 
@@ -584,7 +584,8 @@ SCIP_RETCODE SCIPincludeHeurZeroobj(
          &heurdata->addallsols, TRUE, DEFAULT_ADDALLSOLS, NULL, NULL) );
 
    SCIP_CALL( SCIPaddBoolParam(scip, "heuristics/"HEUR_NAME"/onlywithoutsol",
-         "Should heuristic only be executed if no primal solution was found, yet?",
+         "should heuristic only be executed if no primal solution was found, yet?",
          &heurdata->onlywithoutsol, TRUE, DEFAULT_ONLYWITHOUTSOL, NULL, NULL) );
+
    return SCIP_OKAY;
 }
